--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_messaging: ^9.0.1
   http: ^0.13.1
+  intl: ^0.17.0
   shared_preferences: ^2.0.5
   url_launcher: ^6.0.2
 
